finished week2 learning activities

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/get-dates.js" defer></script>
     <script src="scripts/courses.js" defer></script>
+    <meta property="og:title" content="Ethan's Course homepage">
+    <meta property="og:description" content="Browse Ethan Schlese's coursework and website he built for WDD 231, a web development course offered by BYU-I.">
+    <meta property="og:image" content="images/portrait.webp">
+    <meta property="og:URL" content="https://eschlese.github.io/wdd231">
 </head>
 
 <body>
