started on the directory list view

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,13 +42,15 @@
     </header>
     <main>
         <h1>Directory</h1>
+        <div class="menu">
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
+        </div>
         <div id="cards" class="grid"></div>
     </main>
     <footer>
         <div>
-            <p>
-                <bold>Morinville Chamber of Commerce</bold>
-            </p>
+            <p>Morinville Chamber of Commerce</p>
             <p>Suite 102 10507-100 Ave</p>
             <p>Morinville AB, T8R 1A2</p>
             <p>chamber@morinvillechamber.com</p>
