updated meta tags

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morinville Chamber of Commerce</title>
+    <title>Morinville Chamber of Commerce Direcotry</title>
     <meta name="description"
-        content="This is the homepage for the Morinville Chamber of Commerce website. This webpage was designed for a school assignment and is not official.">
+        content="This is the directory page for the Morinville Chamber of Commerce website. This webpage was designed for a school assignment and is not official.">
     <meta name="author" content="Ethan Schlese">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,8 @@
     <meta property="og:description"
         content="Explore and learn about the Morinville Chamber of Commerce. This is a mock webpage designed for a schoolwork assignment.">
     <meta property="og:image" content="images/morinville-sign.jpg">
-    <meta property="og:URL" content="https://eschlese.github.io/wdd231/chamber/directory">
+    <meta property="og:url" content="https://eschlese.github.io/wdd231/chamber/directory">
+    <meta property="og:image:alt" content="City of Morinville Sign">
 </head>
 
 <body>
