fixed the url for the meta image tag

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,9 +22,8 @@
     <meta property="og:title" content="Morinville Chamber of Commerce">
     <meta property="og:description"
         content="Explore and learn about the Morinville Chamber of Commerce. This is a mock webpage designed for a schoolwork assignment.">
-    <meta property="og:image" content="images/morinville-sign.jpg">
+    <meta property="og:image" content="https://eschlese.github.io/wdd231/chamber/images/morinville-sign.jpg">
     <meta property="og:url" content="https://eschlese.github.io/wdd231/chamber/directory">
-    <meta property="og:image:alt" content="City of Morinville Sign">
 </head>
 
 <body>
