--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morinville Chamber of Commerce Direcotry</title>
     <meta name="description"
-        content="This is the directory page for the Morinville Chamber of Commerce website. This webpage was designed for a school assignment and is not official.">
+        content="This is the join page for the Morinville Chamber of Commerce website. This webpage was designed for a school assignment and is not official.">
     <meta name="author" content="Ethan Schlese">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,19 +34,51 @@
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a class="current" href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a class="current" href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Directory</h1>
-        <div class="menu">
-            <button id="grid">Grid</button>
-            <button id="list">List</button>
-        </div>
-        <div id="cards" class="grid"></div>
+        <h1>Join</h1>
+        <form action="thankyou.html" method="get" class="wf1">
+            <title>Join the Chamber of Commerce</title>
+            <fieldset>
+            <label>First Name*<input type="text" name="fname" title="Your first given name" autocomplete="given-name"
+                    required></label>
+            <label>Last Name*<input type="text" name="lname" title="Your last name" autocomplete="family-name"
+                    required></label>
+            <label>Organization Title <input type="text" name="position"
+                    title="Minimum 7 characters, can contain '-' and ' '." autocomplete="organization-title"
+                    pattern="[A-Za-z -].{7,}"> </label>
+            <label>Email*<input type="email" name="email" title="email" autocomplete="email"
+                    placeholder="youremail@domain.com" required></label>
+            <label>Phone Number* <input type="tel" name="phone" title="Your phone Number" autocomplete="tel" required>
+            </label>
+            <label>Organizations Name* <input type="text" required name="company-name" title="Your organizations name"
+                    autocomplete="organization"></label>
+            </fieldset>
+
+            <fieldset>
+            <p>Membership Level</p>
+            <div class="member-level">
+                <label class="level">Non-Profit<input type="radio" name="membership" required></label>
+                <label class="level">Bronze Membership<input type="radio" name="membership" required></label>
+                <label class="level">Silver Membership<input type="radio" name="membership" required></label>
+                <label class="level">Gold Membership<input type="radio" name="membership" required></label>
+            </div>
+            </fieldset>
+
+            <label>Organization Description<textarea name="description"
+                    title="Enter a description of your organization here"
+                    placeholder="Enter your desc here..."></textarea></label>
+
+            <input type="hidden" name="timestamp" id="timestamp">
+
+            <input type="submit" value="Confirm Request to Join">
+
+        </form>
     </main>
     <footer>
         <div>
