--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morinville Chamber of Commerce Direcotry</title>
     <meta name="description"
-        content="This is the directory page for the Morinville Chamber of Commerce website. This webpage was designed for a school assignment and is not official.">
+        content="This is the join page for the Morinville Chamber of Commerce website. This webpage was designed for a school assignment and is not official.">
     <meta name="author" content="Ethan Schlese">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,19 +34,15 @@
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a class="current" href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a class="current" href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Directory</h1>
-        <div class="menu">
-            <button id="grid">Grid</button>
-            <button id="list">List</button>
-        </div>
-        <div id="cards" class="grid"></div>
+        <h1>Thank you!</h1>
+        <p>Thank you for your application to join the Morinville Chamber of Commerce. Upon reviewing your application we will reach out to you.</p>
     </main>
     <footer>
         <div>
