Updated form elements to meet criteria

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morinville Chamber of Commerce Direcotry</title>
+    <title>Join the Morinville Chamber of Commerce</title>
     <meta name="description"
         content="This is the join page for the Morinville Chamber of Commerce website. This webpage was designed for a school assignment and is not official.">
     <meta name="author" content="Ethan Schlese">
@@ -41,9 +41,8 @@
         </nav>
     </header>
     <main>
-        <h1>Join</h1>
+        <h1>Join the Chamber of Commerce</h1>
         <form action="thankyou.html" method="get" class="wf1">
-            <title>Join the Chamber of Commerce</title>
             <fieldset>
             <label>First Name*<input type="text" name="fname" title="Your first given name" autocomplete="given-name"
                     required></label>
@@ -63,10 +62,10 @@
             <fieldset>
             <p>Membership Level</p>
             <div class="member-level">
-                <label class="level">Non-Profit<input type="radio" name="membership" required></label>
-                <label class="level">Bronze Membership<input type="radio" name="membership" required></label>
-                <label class="level">Silver Membership<input type="radio" name="membership" required></label>
-                <label class="level">Gold Membership<input type="radio" name="membership" required></label>
+                <label class="level">NP<input type="radio" name="membership" required></label>
+                <label class="level">Bronze<input type="radio" name="membership" required></label>
+                <label class="level">Silver<input type="radio" name="membership" required></label>
+                <label class="level">Gold<input type="radio" name="membership" required></label>
             </div>
             </fieldset>
 
