adjusted weather and events modules

--- a/final/events.html
+++ b/final/events.html
@@ -11,11 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link href="styles/base.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/events.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="icon" href="favicon.ico">
-    <script src="scripts/events.js" defer></script>
+    <script type="module" src="data/events.mjs"></script>
+    <script type="module" src="scripts/events.mjs"></script>
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/menu.js" defer></script>
 </head>
