--- a/final/index.html
+++ b/final/index.html
@@ -80,7 +80,7 @@
                 find out more and join our next meetup. We hope to see you soon!</p>
             <a href="contact-us.html">Contact Us</a>
         </article>
-        <article>
+        <article class="weather">
             <h3>Current Weather in Kelowna</h3>
             <p>Temp: <span id="current-temp"></span></p>
             <figure>
