fixed social meta tags and also css dups

--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -12,13 +12,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link href="styles/base.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/contact-us.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/contact-us-large.css">
     <link rel="icon" href="favicon.ico">
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/menu.js" defer></script>
+    <meta property="og:title" content="Kelowna Longboard Alliance">
+    <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
+    <meta property="og:image" content="images/community.webp">
+    <meta property="og:URL" content="https://eschlese.github.io/wdd231/final">
 </head>
 
 <body>
