--- a/final/siteplan.html
+++ b/final/siteplan.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
     <link href="styles/siteplan.css" rel="stylesheet">
+    <meta property="og:title" content="Kelowna Longboard Alliance">
+    <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
+    <meta property="og:image" content="images/community.webp">
+    <meta property="og:URL" content="https://eschlese.github.io/wdd231/final">
 </head>
 
 <body>
