fixed weather icon src

--- a/final/index.html
+++ b/final/index.html
@@ -84,7 +84,7 @@
             <h3>Current Weather in Kelowna</h3>
             <p>Temp: <span id="current-temp"></span></p>
             <figure>
-                <img id="weather-icon" src="" alt="">
+                <img id="weather-icon" alt="current weather icon">
                 <figcaption>Looks like a great day to skate!</figcaption>
             </figure>
         </article>
