--- a/final/index.html
+++ b/final/index.html
@@ -93,6 +93,7 @@
         <div class="page-info">
             <p>&copy;<span id="currentYear"></span> | Ethan Schlese | Canada</p>
             <p id="lastModified"></p>
+            <a href="https://photos.app.goo.gl/g8gLkcyKmzfYcvHX6" target="_blank">Video Explanation</a>
         </div>
         <div class="socials">
             <a href="https://www.instagram.com/kelownalongboardalliance/" target="_blank">
