--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/contact-us.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/contact-us-large.css">
@@ -21,7 +22,7 @@
     <meta property="og:title" content="Kelowna Longboard Alliance">
     <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
     <meta property="og:image" content="images/community.webp">
-    <meta property="og:URL" content="https://eschlese.github.io/wdd231/final">
+    <meta property="og:URL" content="https://eschlese.github.io/wdd231/final/index.html">
 </head>
 
 <body>
