possibly actually fixed fb meta tags

--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Kelowna Longboard Alliance">
     <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
     <meta property="og:image" content="images/community.webp">
-    <meta property="og:URL" content="https://eschlese.github.io/wdd231/final/index.html">
+    <meta property="og:url" content="https://eschlese.github.io/wdd231/final/index.html">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
                 </fieldset>
             </form>
 
-            <img src="images/ghf.webp"
+            <img id="contact-us-img" src="images/ghf.webp"
                 alt="A longboarder crouches and leans through a right corner, arms in the air for balance.">
         </div>
     </main>
