--- a/final/siteplan.html
+++ b/final/siteplan.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Kelowna Longboard Alliance">
     <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
     <meta property="og:image" content="images/community.webp">
-    <meta property="og:URL" content="https://eschlese.github.io/wdd231/final/index.html">
+    <meta property="og:url" content="https://eschlese.github.io/wdd231/final/index.html">
 </head>
 
 <body>
