fixed facebook meta tags again

--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Kelowna Longboard Alliance">
     <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
     <meta property="og:image" content="images/community.webp">
-    <meta property="og:url" content="https://eschlese.github.io/wdd231/final/index.html">
+    <meta property="og:url" content="https://eschlese.github.io/wdd231/final/contact-us.html">
 </head>
 
 <body>
