actually fixed facebook meta tags this time

--- a/final/form-results.html
+++ b/final/form-results.html
@@ -18,7 +18,7 @@
     <script src="scripts/menu.js" defer></script>
     <meta property="og:title" content="Kelowna Longboard Alliance">
     <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
-    <meta property="og:image" content="images/community.webp">
+    <meta property="og:image" content="https://eschlese.github.io/wdd231/final/images/community.webp">
     <meta property="og:url" content="https://eschlese.github.io/wdd231/final/index.html">
 
 </head>
