--- a/final/siteplan.html
+++ b/final/siteplan.html
@@ -13,7 +13,7 @@
     <link href="styles/siteplan.css" rel="stylesheet">
     <meta property="og:title" content="Kelowna Longboard Alliance">
     <meta property="og:description" content="Learn about the Kelowna Longboard Alliance and join our community!">
-    <meta property="og:image" content="images/community.webp">
+    <meta property="og:image" content="https://eschlese.github.io/wdd231/final/images/community.webp">
     <meta property="og:url" content="https://eschlese.github.io/wdd231/final/index.html">
 </head>
 
